# BoardroomBrief

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: nightly-agent.yml
docs/adr/: README.md
docs/examples/: brief-2026-04-20.md  brief-2026-04-27.md
scripts/: nightly_agent.py
src/boardroom/: __init__.py  cli.py
src/boardroom/agents/: formatter.py  narrator.py
src/boardroom/collectors/: github.py  incidents.py  jira.py
src/boardroom/core/: config.py
src/boardroom/models/: brief.py
tests/: test_collectors.py  test_formatter.py  test_models.py  test_narrator.py
